--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: second step!
         env:
-          JOB_CONTEXT: ${{toJson(jon)}}
+          JOB_CONTEXT: ${{toJson(job)}}
         run: |
           echo "Job context: $JOB_CONTEXT"
           echo "Done!"
